--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@ footer {
     <h1 class="hero-name fade-up fade-up-1">
       Samuel<br><em>Oyedokun</em>
     </h1>
-    <p class="hero-title fade-up fade-up-2">Data Analyst · BI Engineer · AI Product Builder</p>
+    <p class="hero-title fade-up fade-up-2">Data Analyst · Data Systems Developer . BI Engineer · AI Product Builder</p>
     <p class="hero-desc fade-up fade-up-3">
       Most data work stops at the chart. Mine doesn't. I design and deploy analytical systems and AI-powered products that pull from real databases, compute the numbers that matter, and put them in front of the right people — automatically, every day.
     </p>
